--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
   <main class="container my-5">
     <section class="mb-4">
-      <p>Administrative Staff
+      <p>
         Graduate (D3) in Business Management. Experienced as a Collection Admin for 2 years.
         Possesses knowledge of administration, document filing, and is skilled in operating Microsoft Office.
         A meticulous, adaptable, communicative, and responsible individual</p>
@@ -70,16 +70,14 @@
     <section class="mb-4">
       <h2 class="section-title">Profile
       </h2>
-      <li> Home Address : Jl. Mayjen Ishak Djuarsa, Gg Mesjid 1, Loji
-
-        Loji Urban Village, West Bogor District
-
-        Bogor City, West Java Province, Indonesia.</li>
-      <li> Place of Birth : Bogor, Indonesia</li>
-      <li> Date of Birth : February 7, 1994</li>
+      <li> Home Address    : Jl. Mayjen Ishak Djuarsa Gg Mesjid 1 Loji.
+                             Loji Urban Village, West Bogor District.
+                             Bogor City, West Java Province, Indonesia.</li>
+      <li> Place of Birth  : Bogor, Indonesia</li>
+      <li> Date of Birth   : February 7, 1994</li>
       <li> Height | Weight : 147 cm | 42 kg</li>
-      <li> Status : Single</li>
-      <li> Postal Code : 16117</li>
+      <li> Status          : Single</li>
+      <li> Postal Code     : 16117</li>
       </ul>
     </section>
     <section class="mb-4">
@@ -149,7 +147,9 @@
         <h5>Food Stall Staff - Kedai Gumetap (Bogor,Indonesia)</h5>
         <p><em>August 2021 - Present</em></p>
         <ul>
-          <li>Serving customers both offline and online. </li>
+          <li>Serving customers both offline and online</li>
+          <li>Chopped vegetables</li>
+           <li>Washed dishes</li>
           <li>Recording used-up tableware and ingredients.</li>
         </ul>
       </div>
