--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       </ul>
     </section>
     <section class="mb-4">
-      <h2 class="section-title">Certifications</h2>
+      <h2 class="section-title">Certifications & Training</h2>
       <ul>
         <li>
           <a class="text-black text-decoration-none"
