--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </li>
          <li>
           <a class="text-black text-decoration-none"
-            href="https://drive.google.com/file/d/1tAI8cNbltpCjnbhvQg7q6HQRKNdca2wb/view?usp=sharing">•	QA Introduction - QA Career Opportunities - My Skill (2025)</a>
+            href="https://drive.google.com/file/d/1tAI8cNbltpCjnbhvQg7q6HQRKNdca2wb/view?usp=sharing">QA Introduction - QA Career Opportunities - My Skill (2025)</a>
         </li>
          <a class="text-black text-decoration-none"
             href="https://drive.google.com/file/d/1Q2qq10MrGv8ideylf88OM2soBR_k_eW_/view?usp=sharing">QA in
