--- a/index.html
+++ b/index.html
@@ -82,8 +82,16 @@
     </section>
     <section class="mb-4">
       <h2 class="section-title">EDUCATION</h2>
-      <p><strong>Associate Degree (D3) in Business Management</strong> - Akademi Telekomunikasi Bogor, Indonesia
-        (2014-2017)</p>
+      <li>
+         <a class="text-blue text-decoration-none"
+            href="https://drive.google.com/file/d/1uayJVKOzd_1cBAEK6AXr2y-57IxPlOB5/view?usp=sharing"><strong>Associate Degree (D3) in Business Management</strong> 
+           - Akademi Telekomunikasi Bogor, Indonesia (2014-2017)</a>
+        </li>
+      <li>
+         <a class="text-blue text-decoration-none"
+            href="https://drive.google.com/file/d/1e1Py75kJx_pob_7tdw19w50iiUNyEQLC/view?usp=sharing"><strong>Academic Transkip - Associate Degree in Business Management</strong> 
+           - GPA : 3.13</a>
+        </li>
     </section>
     <section class="mb-4">
       <h2 class="section-title">Work Experience</h2>
@@ -202,79 +210,79 @@
       <h2 class="section-title">Certifications & Training</h2>
       <ul>
         <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href=https://drive.google.com/file/d/1jJE3xi9ArZb2yfme4GBmbiNuRdcyKUMn/view?usp=sharing>Table Manner
             Training Certificate - Training & Research Center BHI Hospitality School (2017)</a>
           </li>
           <li>
-            <a class="text-black text-decoration-none"
+            <a class="text-blue text-decoration-none"
               href=https://drive.google.com/file/d/174AAOpUx7IQU-92pdoG_heWCBIUrN5N9/view?usp=sharing>Basic 1 English
               Speaking Course Held - Speaking Partner by Kampung Inggris (2023)</a>
           </li>
           <li>
-            <a class="text-black text-decoration-none"
+            <a class="text-blue text-decoration-none"
               href=https://drive.google.com/file/d/1VppBAu91vkz5KJi5lbXvsfs7aWN3xdIC/view?usp=sharing>Power Pivot 1 - My Skill (2024)</a>
           </li>
           <li>
-            <a class="text-black text-decoration-none"
+            <a class="text-blue text-decoration-none"
               href="https://drive.google.com/file/d/1T3B7gS_3OqILNhaRwTQ_CN1q5SpUcWyZ/view?usp=sharing">Power Pivot 2 - My Skill (2024)</a>
           </li>
           <li>
-            <a class="text-black text-decoration-none"
+            <a class="text-blue text-decoration-none"
               href="https://drive.google.com/file/d/1Uv7GdiEO37ka00eoNupXQvDkpFaq_fhe/view?usp=sharing">Power Pivot 3 - My Skill (2024)</a>
         </li>
         <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1Ib9nQyQToA4Eg_Xk4UkCgI2p08MPseeS/view?usp=sharing">Quality
             Assurance (QA) Fundamental - My Skill (2025)</a>
         </li>
         <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1Q2qq10MrGv8ideylf88OM2soBR_k_eW_/view?usp=sharing">QA in
             Software Development Life Cycle (SDLC) - My Skill (2025)</a>
         </li>
          <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1tAI8cNbltpCjnbhvQg7q6HQRKNdca2wb/view?usp=sharing">QA Introduction - 
             QA Career Opportunities - My Skill (2025)</a>
         </li>
         <li>
-         <a class="text-black text-decoration-none"
+         <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1IS2g-NJPn9VX9neYEx2jnhabgkmfU16k/view?usp=sharing">Test Technique - 
            Test Level & Test Type - My Skill (2025)</a>
         </li>
         <li>
-         <a class="text-black text-decoration-none"
+         <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1kWG4YjQW3XP_qOLcljD_rWCAUF8Ec5hM/view?usp=sharing">Test Technique - 
            Functional Test - My Skill (2025)</a>
         </li>
         <li>
-         <a class="text-black text-decoration-none"
+         <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1z4wOJ2GrpnFtuT8lQJOn9A3ABGsb-Li2/view?usp=sharing">Test Technique - Test Design  
           - My Skill (2025)</a>
         </li>
         <li>
-         <a class="text-black text-decoration-none"
+         <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1ms7OMTX7oQ79MEb6eaqvw2CSHyblC9NZ/view?usp=sharing">Test Technique - 
            Automation Testing - My Skill (2025)</a>
         </li>
         <li>
-         <a class="text-black text-decoration-none"
+         <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/123zQnWCj-Dpng8aHmCxbbBreAlJDhk7K/view?usp=sharing">Test Technique - 
            Static Testing - My Skill (2025)</a>
         </li>
         <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1IHKmkPsIgxc0OE10OMooWrlevmjdRSih/view?usp=sharing">Basic
             English,Part of Speech Introduction - My Skill (2025)</a>
         </li>
         <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1hBJ9_r0UqvQpijkUtU066Q8lME_uBjrI/view?usp=sharing">Basic
             English, Type Of Verbs - My Skill (2025)</a>
         </li>
         <li>
-          <a class="text-black text-decoration-none"
+          <a class="text-blue text-decoration-none"
             href="https://drive.google.com/file/d/1hBJ9_r0UqvQpijkUtU066Q8lME_uBjrI/view?usp=sharing">Basic
             English, Type Of Nouns - My Skill (2025)</a>
         </li>
