--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         A meticulous, adaptable, communicative, and responsible individual</p>
     </section>
     <section class="mb-4">
-      <h2 class="section-title">Profile
+      <h2 class="section-title">PROFILE
       </h2>
       <li> Home Address    : Jl. Mayjen Ishak Djuarsa Gg Mesjid 1 Loji.
                              Loji Urban Village, West Bogor District.
@@ -182,7 +182,7 @@
       <h2 class="section-title">Technical Skills
       </h2>
       <li> Ms Word</li>
-      <li> Ms Excel</li>
+      <li> Ms Excel (Pivot Table</li>
       <li> Ms Power Point</li>
       <li> Document Filing</li>
       <li> Writing Chronology Reports</li>
