--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <h2 class="section-title">Technical Skills
       </h2>
       <li> Ms Word</li>
-      <li> Ms Excel (Pivot Table</li>
+      <li> Ms Excel (Pivot Table)</li>
       <li> Ms Power Point</li>
       <li> Document Filing</li>
       <li> Writing Chronology Reports</li>
