--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="container my-5">
     <section class="mb-4">
       <p>
-        Graduate (D3) in Business Management. Experienced as a Admin for 3 years.
+        Graduate (D3) in Business Management. Experienced as a Administrative Staff for 3 years.
         Possesses knowledge of administration, document filing, and is skilled in operating Microsoft Office.
         A meticulous, adaptable, communicative, and responsible individual</p>
     </section>
