--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
       <div><i class="fab fa-linkedin"></i> <a style="text-decoration: none; color:white;"
           href="https://www.linkedin.com/in/shinta-lestari-4937a8265/">Shinta Lestari</a></div>
     </div>
+    <a href="https://drive.google.com/file/d/1IrPXjZOZdoiOQshia0ylSYWlt10x1Cca/view?usp=sharing" download="Shinta-Lestari-CV.pdf" class="btn-download">
+    📄 Download CV
+</a>
+<style>
+    .btn-download {
+        display: inline-block;
+        background: linear-gradient(135deg, #007BFF, #0056b3);
+        color: white;
+        padding: 12px 24px;
+        border-radius: 8px;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 16px;
+        box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        transition: all 0.3s ease;
+    }
+
+    .btn-download:hover {
+        background: linear-gradient(135deg, #0056b3, #003f7f);
+        transform: translateY(-2px);
+        box-shadow: 0 6px 14px rgba(0,0,0,0.2);
+    }
+</style>
   </header>
 
   <main class="container my-5">
@@ -305,4 +328,5 @@
 </body>
 
 </html>
+
 
